; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_options.c_msglevel_forward_compatible.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_options.c_msglevel_forward_compatible.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.options = type { i64 }

@M_WARN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.options*, i32)* @msglevel_forward_compatible to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @msglevel_forward_compatible(%struct.options* %0, i32 %1) #0 {
  %3 = alloca %struct.options*, align 8
  %4 = alloca i32, align 4
  store %struct.options* %0, %struct.options** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.options*, %struct.options** %3, align 8
  %6 = getelementptr inbounds %struct.options, %struct.options* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32, i32* @M_WARN, align 4
  br label %13

11:                                               ; preds = %2
  %12 = load i32, i32* %4, align 4
  br label %13

13:                                               ; preds = %11, %9
  %14 = phi i32 [ %10, %9 ], [ %12, %11 ]
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
